--- a/htdocs/css/main-responsive.css
+++ b/htdocs/css/main-responsive.css
@@ -1,9 +1,15 @@
 /** Main responsive stylesheet */
 
 @media (max-width: 979px) {
-	body {
-	  padding-top: 20px;
-	}
+  body {
+    padding-top: 10px;
+  }
+}
+
+@media (max-width: 767px) {
+  body {
+    padding: 10px;
+  }
 }
 
 /* TODO remove outer border stuff when on phone screen */
