--- a/htdocs/css/main.css
+++ b/htdocs/css/main.css
@@ -185,3 +185,91 @@ textarea.post-content {
 .share-button {
 	margin-bottom: 4px;
 }
+
+.recaptcha_form {
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+	max-width: 300px;
+    border: 1px solid #DFDFDF !important;
+    -webkit-border-radius: 4px;
+       -moz-border-radius: 4px;
+            border-radius: 4px;
+    margin: 0 0 10px;
+    padding: 4px;
+}
+
+.recaptcha_image {
+    width: 100% !important;
+    height: auto !important;
+}
+
+.recaptcha_image img {
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+	width: 100%;
+    height: auto;
+    -webkit-border-radius: 2px;
+       -moz-border-radius: 2px;
+            border-radius: 2px;
+    border: 3px solid #FFF;
+}
+
+.recaptcha_options {
+    list-style: none;
+    margin: 4px 0 0 4px;
+    height: 18px;
+}
+
+.recaptcha_options li {
+	float: left;
+	margin: 0 4px 0 0;
+}
+
+.recaptcha_options li a {
+	text-decoration: none;
+	text-shadow: 0 1px 1px black;
+    font-size: 16px;
+    color: white;
+	display: block;
+	width: 20px;
+	height: 18px;
+}
+
+.recaptcha_options li a:active {
+	position: relative;
+	top: 1px;
+	text-shadow: none;
+}
+
+.recaptcha_is_showing_audio embed {
+	height: 0;
+	width: 0;
+	overflow: hidden;
+}
+
+.recaptcha_is_showing_audio .recaptcha_image {
+    -webkit-box-sizing: border-box;
+	   -moz-box-sizing: border-box;
+            box-sizing: border-box;
+	width: 100%;
+	height: 60px;
+	background: #FFF;
+    -webkit-border-radius: 2px;
+       -moz-border-radius: 2px;
+            border-radius: 2px;
+	border: 3px solid #FFF;
+}
+
+.recaptcha_is_showing_audio .recaptcha_image br {
+	display: none;
+}
+
+.recaptcha_is_showing_audio .recaptcha_image #recaptcha_audio_download {
+    display: block;
+}
+
+.captcha_hide {
+    display: none;
+}
