--- a/htdocs/css/main.css
+++ b/htdocs/css/main.css
@@ -87,7 +87,7 @@ h1, h2, h3, h4, h5 {
     margin: 14px 0;
 }
 
-.form-signin {
+div.form-signin {
   max-width: 340px;
   padding: 19px 29px 29px;
   margin: 0 auto 20px;
@@ -100,15 +100,9 @@ h1, h2, h3, h4, h5 {
      -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
           box-shadow: 0 1px 2px rgba(0,0,0,.05);
 }
-.form-signin .form-signin-heading,
-.form-signin .checkbox {
-  /*margin-bottom: 10px;*/
-}
-.form-signin label.checkbox {
-  padding-left: 0;
-}
-.form-signin input[type="text"],
-.form-signin input[type="password"] {
+
+form.form-signin input[type="text"],
+form.form-signin input[type="password"] {
   font-size: 16px;
   height: auto;
   margin-bottom: 15px;
