Workaround for incorrect padding (fix #7)
Signed-off-by: Daniele Ricci <daniele.athome@gmail.com>

--- a/htdocs/css/main.css
+++ b/htdocs/css/main.css
@@ -336,6 +336,10 @@ textarea.post-content {
     padding-right: 0;
 }
 
+ul.yiiPager a:link, ul.yiiPager a:visited {
+    padding: 5px 14px !important;
+}
+
 @media (max-width: 979px) {
   body {
     padding-top: 10px;
